testsuite/tests/printer/T14343b.stderr

T14343b.hs:10:9: error:
    • Found hole: _ :: Proxy '( 'True, 'False)
    • In the expression: _ :: Proxy '( 'True, 'False)
      In an equation for ‘test1’: test1 = _ :: Proxy '( 'True, 'False)
    • Relevant bindings include
        test1 :: Proxy '( 'True, 'False) (bound at T14343b.hs:10:1)
      Valid hole fits include
        test1 :: Proxy '( 'True, 'False) (defined at T14343b.hs:10:1)
        Proxy :: forall {k1} (k2 :: k1). Proxy k2
          with Proxy @'( 'True, 'False)
          (defined at T14343b.hs:8:16)

T14343b.hs:11:9: error:
    • Found hole: _ :: Proxy '( '( 'True, 'False), 'False)
    • In the expression: _ :: Proxy '( '( 'True, 'False), 'False)
      In an equation for ‘test2’:
          test2 = _ :: Proxy '( '( 'True, 'False), 'False)
    • Relevant bindings include
        test2 :: Proxy '( '( 'True, 'False), 'False)
          (bound at T14343b.hs:11:1)
      Valid hole fits include
        test2 :: Proxy '( '( 'True, 'False), 'False)
          (defined at T14343b.hs:11:1)
        Proxy :: forall {k1} (k2 :: k1). Proxy k2
          with Proxy @'( '( 'True, 'False), 'False)
          (defined at T14343b.hs:8:16)

T14343b.hs:12:9: error:
    • Found hole: _ :: Proxy '( '[1], 'False)
    • In the expression: _ :: Proxy '( '[1], 'False)
      In an equation for ‘test3’: test3 = _ :: Proxy '( '[1], 'False)
    • Relevant bindings include
        test3 :: Proxy '( '[1], 'False) (bound at T14343b.hs:12:1)
      Valid hole fits include
        test3 :: Proxy '( '[1], 'False) (defined at T14343b.hs:12:1)
        Proxy :: forall {k1} (k2 :: k1). Proxy k2
          with Proxy @'( '[1], 'False)
          (defined at T14343b.hs:8:16)
